--- a/polymer-parent/vyne-app/src/index.html
+++ b/polymer-parent/vyne-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Roboto+Mono:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Nanum+Gothic+Coding" rel="stylesheet">
   <meta charset="utf-8">
   <title>VyneApp</title>
   <base href="/">
