--- a/polymer-parent/vyne-app/src/index.html
+++ b/polymer-parent/vyne-app/src/index.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Nanum+Gothic+Coding" rel="stylesheet">
   <meta charset="utf-8">
-  <title>VyneApp</title>
+  <title>Vyne</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
