--- a/vyne-parent/vyne-query-service/src/main/web/src/index.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Nanum+Gothic+Coding" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600|Open+Sans:300,400,600|Nanum+Gothic+Coding" rel="stylesheet">
   <meta charset="utf-8">
   <title>Vyne</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+
 </head>
 <body>
 <app-root></app-root>
