--- a/vyne-parent/vyne-query-service/src/main/web/src/index.html
+++ b/vyne-parent/vyne-query-service/src/main/web/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
   <meta charset="utf-8">
   <title>Vyne</title>
   <base href="/">
