LENS-16 Cask: Handle ingestion message failures

--- a/cask/src/main/resources/static/index.html
+++ b/cask/src/main/resources/static/index.html
@@ -44,7 +44,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 <script>
-    var caskUrl = "ws://localhost:8800/cask/OrderWindowSummary";
+    var caskUrl = "ws://localhost:8800/cask/OrderWindowSummary?debug=true";
     var clientWebSocket;
     var message = {
         "Date": "2020-03-19 11-PM",
