LENS-68 Cask: Persist date column types to DB

--- a/cask/src/main/resources/static/index.html
+++ b/cask/src/main/resources/static/index.html
@@ -54,7 +54,8 @@
       "Low": "6186.08",
       "Close": "6235.2",
       "Volume BTC": "817.78",
-      "Volume USD": "5115937.58"
+      "Volume USD": "5115937.58",
+      "OrderDate": "2020-01-01"
    };
 
    function connectToCask(url) {
