Style updates for error message

--- a/vyne-query-service/src/main/web/src/index.html
+++ b/vyne-query-service/src/main/web/src/index.html
@@ -15,24 +15,60 @@
 </head>
 
 <body>
+
+<div id="root">
+  <app-root></app-root>
+</div>
+<div id="noSupport" style="visibility: hidden">
+  <div class="noSupport">
+    <img src="assets/img/vyne-logo-round.png">
+    <p>This browser isn't supported. Try Chrome or Firefox. </p>
+  </div>
+</div>
+
+</body>
 <script>
   function isIE() {
     return /Trident\/|MSIE/.test(window.navigator.userAgent);
   }
 
   if (isIE()) {
-    document.getElementById('noSupport');
+    document.getElementById('noSupport').style.visibility = 'visible';
+    document.getElementById('root').style.visibility = 'hidden';
+
   } else {
-    document.getElementById('root');
+    document.getElementById('root').style.visibility = 'visible';
+    document.getElementById('noSupport').style.visibility = 'hidden';
+
   }
 </script>
-<div id="root">
-  <app-root></app-root>
-</div>
-<div id="noSupport">
-  <p>Your browser is not supported.</p>
-</div>
+<style>
+  #noSupport {
+    position: relative;
+    height: 100vh;
+  }
 
-</body>
+  #noSupport .noSupport {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+  .noSupport {
+    max-width: 460px;
+    width: 100%;
+    text-align: center;
+    line-height: 1.4;
+  }
+
+  .noSupport p {
+    font-size: 16px;
+    color: #000;
+    font-weight: 400;
+  }
+</style>
 
 </html>
