--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -62,7 +62,7 @@
    <!--
       PIPELINES ACTIONS
    -->
-   <h3><span class="fa fa-exchange">  <b>Orchestrator</b></span></h3>
+   <h3><span class="fa fa-cogs">  <b>Orchestrator</b></span></h3>
 
 
    <div class="row">
@@ -226,7 +226,7 @@
                 "props": {
                   "content-type": "csv",
                   "csv.csvDelimiter": "|",
-                  "csv.nullValue": "null",
+                  "csv.nullValue": "null,N/A",
                   "csv.csvFirstRecordAsHeader": "true"
                 },
                 "targetType": "TradeSummary",
@@ -235,9 +235,6 @@
             }
         }
     }
-
-
-
 
 
 
