--- a/vyne-query-service/src/main/web/src/index.html
+++ b/vyne-query-service/src/main/web/src/index.html
@@ -14,6 +14,7 @@
   <style>
     #noSupport {
       position: relative;
+      display: none;
       height: 100vh;
     }
 
@@ -43,33 +44,32 @@
 
 <body>
 
-  <div id="root">
-    <app-root></app-root>
+<div id="root" style = "height: 100%">
+  <app-root></app-root>
+</div>
+<div id="noSupport" style="display: none">
+  <div class="noSupport">
+    <img src="assets/img/vyne-logo-round.png" width="128px" height="128px">
+    <p>Oh no! Your browser has gone the way of the dinosaur, and isn't supported. We suggest you give Firefox or
+      Chrome
+      a go.
+    </p>
   </div>
-  <div id="noSupport" style="visibility: hidden">
-    <div class="noSupport">
-      <img src="assets/img/vyne-logo-round.png" width="128px" height="128px">
-      <p>Oh no! Your browser has gone the way of the dinosaur, and isn't supported. We suggest you give Firefox or
-        Chrome
-        a go.
-      </p>
-    </div>
-  </div>
-  <script>
-    function isIE() {
-      return /Trident\/|MSIE/.test(window.navigator.userAgent);
-    }
+</div>
+<script>
+  function isIE() {
+    return /Trident\/|MSIE/.test(window.navigator.userAgent);
+  }
 
-    if (isIE()) {
-      document.getElementById('noSupport').style.visibility = 'visible';
-      document.getElementById('root').style.visibility = 'hidden';
+  if (isIE()) {
+    document.getElementById('noSupport').style.display = 'block';
+    document.getElementById('root').style.display = 'none';
 
-    } else {
-      document.getElementById('root').style.visibility = 'visible';
-      document.getElementById('noSupport').style.visibility = 'hidden';
-
-    }
-  </script>
+  } else {
+    document.getElementById('root').style.display = 'block';
+    document.getElementById('noSupport').style.display = 'none';
+  }
+</script>
 </body>
 
 </html>
