--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -225,7 +225,7 @@
         "transport": {
             "props": {
                 "content-type": "csv",
-                "csv.csvDelimiter": "|",
+                "csv.csvDelimiter": ";",
                 "csv.nullValue": "NULL,N/A",
                 "csv.csvFirstRecordAsHeader": "true"
             },
