--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -207,7 +207,7 @@
     "input": {
         "type": "hpc.orders.Order",
         "transport": {
-            "topic": "pipeline-input-avro",
+            "topic": "hpc-csv-avro-input",
             "targetType": "hpc.orders.Order",
             "props": {
                 "group.id": "vyne-pipeline-group",
