--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -203,40 +203,38 @@
    // ACTIONS
     var pipelineOrchestratorUrl = "/runner/pipelines";
     var pipelineDefinition = {
-    "name": "trade-pipeline",
-    "input": {
-        "type": "hpc.orders.Order",
-        "transport": {
-            "topic": "hpc-csv-avro-input",
-            "targetType": "hpc.orders.Order",
-            "props": {
-                "group.id": "vyne-pipeline-group",
-                "bootstrap.servers": "kafka:9092,",
-                "heartbeat.interval.ms": "3000",
-                "session.timeout.ms": "10000",
-                "auto.offset.reset": "earliest"
-            },
-            "type": "kafka-cacib",
-            "direction": "INPUT"
+        "name": "hpc-csv-avro-pipeline",
+        "input": {
+            "type": "hpc.orders.Order",
+            "transport": {
+                "topic": "hpc-csv-avro-input",
+                "targetType": "hpc.orders.Order",
+                "props": {
+                    "group.id": "vyne-hpc-pipeline-group",
+                    "bootstrap.servers": "kafka:9092,",
+                    "heartbeat.interval.ms": "3000",
+                    "session.timeout.ms": "10000",
+                    "auto.offset.reset": "earliest"
+                },
+                "type": "kafka-cacib",
+                "direction": "INPUT"
+            }
+        },
+        "output": {
+            "type": "hpc.orders.Order",
+            "transport": {
+                "props": {
+                    "content-type": "csv",
+                    "csv.csvDelimiter": ";",
+                    "csv.nullValue": "NULL,N/A",
+                    "csv.csvFirstRecordAsHeader": "true"
+                },
+                "targetType": "hpc.orders.Order",
+                "type": "cask",
+                "direction": "OUTPUT"
+            }
         }
-    },
-    "output": {
-        "type": "hpc.orders.Order",
-        "transport": {
-            "props": {
-                "content-type": "csv",
-                "csv.csvDelimiter": ";",
-                "csv.nullValue": "NULL,N/A",
-                "csv.csvFirstRecordAsHeader": "true"
-            },
-            "targetType": "hpc.orders.Order",
-            "type": "cask",
-            "direction": "OUTPUT"
-        }
-    }
-}
-
-
+      }
 
     $(document).ready(function () {
 
