--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
    <div class="row " style="min-height: 250px">
 
       <!-- RUNNER INSTANCES -->
-      <div class="col-4">
+      <div class="col-3">
 
          <div class="row">
             <div class="col text-center m-3">
@@ -157,7 +157,7 @@
                   <td>${i.name}</th>
                   <td>${JSON.parse(i.pipelineDescription).input.transport.type}</td>
                   <td>${JSON.parse(i.pipelineDescription).output.transport.type}</td>
-                  <td>${i.info}</td>
+                  <td style="font-size:12px">${i.info}</td>
                </tr>
           `)
         })
