Fix tests with number enum

--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -282,7 +282,7 @@ ZC Inflation Swap;Opened;969500AMLHB21RACL168;1;1VUV7VQFKUOQSJ21A208;11111111;EL
   "Trader": "O_Fonte_Ion",
   "Text": "",
   "Type": "2",
-  "TimeInForce": "8",
+  "TimeInForce": 8,
   "ExpireDate": "0",
   "ExpireTime": "0",
   "OrderNo": "10385",
