Wrong return type

--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -324,7 +324,7 @@ ZC Inflation Swap;Opened;969500AMLHB21RACL168;1;1VUV7VQFKUOQSJ21A208;11111111;EL
   "Component": "",
   "RwtPrice": "-0.0",
   "QGFCClosurePending": "0",
-  "ValueType": "8",
+  "ValueType": 8,
   "ValueTypeStr": "Basis",
   "Value": "48.200000000",
   "ValueFmt": "2",
