Update files with new schema

--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -337,7 +337,7 @@ ZC Inflation Swap;Opened;969500AMLHB21RACL168;1;1VUV7VQFKUOQSJ21A208;11111111;EL
   "FreeText": "",
   "QtyStatus": "3",
   "QtyStatusStr": "Cf",
-  "TradingStatus": "5",
+  "TradingStatus": 5,
   "TradingStatusStr": "Deleted",
   "CurrentAction": "1",
   "CurrentActionStr": "None",
