--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -276,9 +276,11 @@ ZC Inflation Swap;Opened;969500AMLHB21RACL168;1;1VUV7VQFKUOQSJ21A208;11111111;EL
          "ion-trade": {
             topic: "ion-trade-json-avro-input",
             message: JSON.stringify({
-               "OrderId": "10385_20200505_0",
-               "CPMember":	"MILLENIUM2"
-            },null, 4)
+               "OrderID": "10385_20200505_0",
+               "TradeID": "99999_99999999_999",
+               "CpMember": "JP MORGAN LONDON"
+            }
+            ,null, 4)
          },
 
            ion: {
