--- a/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
+++ b/pipelines/pipelines-orchestrator/src/main/resources/static/index.html
@@ -288,14 +288,12 @@ ZC Inflation Swap;Opened;969500AMLHB21RACL168;1;1VUV7VQFKUOQSJ21A208;11111111;EL
          "ion-trade": {
             topic: "ion-trade-json-avro-input",
             message: JSON.stringify({
-              "OrderId": "10385_20200505_0",
-              "OrderNo": "10385_20200505_0",
-              "TradeId": "99999_99999999_999",
-              "TradeNo": "99999_99999999_999",
-              "CpMember": "JP MORGAN LONDON",
-              "CounterpartyName": "CounterpartyName",
-              "SubRicosID": "SubRicosID"
-            }
+             "OrderId": "10385_20200505_0",
+             "OrderNo": "10385",
+             "TradeId": "99999_99999999_999",
+             "TradeNo": "99999_99999999_999",
+             "CPMember": "JP MORGAN LONDON"
+         }
             ,null, 4)
          },
 
